update notebook and examples

--- a/demo/raw_c++_to_python_wrapper_API_example.ipynb
+++ b/demo/raw_c++_to_python_wrapper_API_example.ipynb
@@ -55,39 +55,79 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NVIDIA CUDA - NVIDIA GeForce GTX 1050 Ti]\n",
-      "\tDevicedeviceType: 4\n",
-      "\tMaxComputeUnits: 6\n",
-      "\tMaxClockFrequency: 1455\n",
-      "\tVersion: OpenCL 3.0 CUDA\n",
-      "\tExtensions: cl_khr_global_int32_base_atomics cl_khr_global_int32_extended_atomics cl_khr_local_int32_base_atomics cl_khr_local_int32_extended_atomics cl_khr_fp64 cl_khr_3d_image_writes cl_khr_byte_addressable_store cl_khr_icd cl_khr_gl_sharing cl_nv_compiler_options cl_nv_device_attribute_query cl_nv_pragma_unroll cl_nv_copy_opts cl_nv_create_buffer cl_khr_int64_base_atomics cl_khr_int64_extended_atomics cl_khr_device_uuid cl_khr_pci_bus_info\n",
-      "\tGlobalMemorySizeInBytes: 4233035776\n",
-      "\tLocalMemorySizeInBytes: 49152\n",
-      "\tMaxMemoryAllocationSizeInBytes: 1058258944\n",
-      "\tMaxWorkGroupSize: 1024\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<pyclesperanto._pyclesperanto.gpu at 0x7fd5a0588af0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "device = pycle.gpu()\n",
-    "print(device.info()) # the print is required in order to keep the formating from c++\n",
-    "                     # the () are required as info() it is a c++ class method"
+    "pycle.gpu()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = pycle.gpu()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is also possible to select a specific device using a string key word contained in its name, for example:"
+    "It is also possible to list all available devices and then to select a specific one using a string key word contained in its name, for example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NVIDIA GeForce GTX 1050 Ti']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device.list_available_devices(\"all\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NVIDIA GeForce GTX 1050 Ti'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device.select_device(\"GTX\", \"all\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,13 +149,13 @@
     }
    ],
    "source": [
-    "device.select_device(\"GTX\")\n",
-    "print(device.info())"
+    "print(device.info()) # the print is required in order to keep the formating from c++\n",
+    "                     # the () are required as info() it is a c++ class method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,12 +192,12 @@
       " |      \n",
       " |      GPU default constructor\n",
       " |      \n",
-      " |      2. __init__(self: pyclesperanto._pyclesperanto.gpu, t_device_name: str, t_device_type: str = 'all') -> None\n",
+      " |      2. __init__(self: pyclesperanto._pyclesperanto.gpu, t_device_name: str, t_device_type: str) -> None\n",
       " |      \n",
       " |      GPU constructor\n",
       " |  \n",
       " |  create(...)\n",
-      " |      create(self: pyclesperanto._pyclesperanto.gpu, dimensions: numpy.ndarray[numpy.float32], t_type: str = 'buffer') -> PyData\n",
+      " |      create(self: pyclesperanto._pyclesperanto.gpu, dimensions: numpy.ndarray[numpy.float32], t_type: str) -> PyData\n",
       " |      \n",
       " |      create an empty gpu array\n",
       " |  \n",
@@ -165,6 +205,11 @@
       " |      info(self: pyclesperanto._pyclesperanto.gpu) -> str\n",
       " |      \n",
       " |      return device informations\n",
+      " |  \n",
+      " |  list_available_devices(...)\n",
+      " |      list_available_devices(self: pyclesperanto._pyclesperanto.gpu, t_device_type: str) -> List[str]\n",
+      " |      \n",
+      " |      list devices available to use on the system\n",
       " |  \n",
       " |  name(...)\n",
       " |      name(self: pyclesperanto._pyclesperanto.gpu) -> str\n",
@@ -177,7 +222,7 @@
       " |      read a gpu array into numpy\n",
       " |  \n",
       " |  push(...)\n",
-      " |      push(self: pyclesperanto._pyclesperanto.gpu, ndarray: numpy.ndarray[numpy.float32], t_type: str = 'buffer') -> PyData\n",
+      " |      push(self: pyclesperanto._pyclesperanto.gpu, ndarray: numpy.ndarray[numpy.float32], t_type: str) -> PyData\n",
       " |      \n",
       " |      create a gpu array and write numpy array into it\n",
       " |  \n",
@@ -187,12 +232,12 @@
       " |      return device score\n",
       " |  \n",
       " |  select_device(...)\n",
-      " |      select_device(self: pyclesperanto._pyclesperanto.gpu, t_device_name: str, t_device_type: str = 'all') -> None\n",
+      " |      select_device(self: pyclesperanto._pyclesperanto.gpu, t_device_name: str, t_device_type: str) -> str\n",
       " |      \n",
       " |      select device from string, return full device name string\n",
       " |  \n",
       " |  set_wait_for_kernel_to_finish(...)\n",
-      " |      set_wait_for_kernel_to_finish(self: pyclesperanto._pyclesperanto.gpu, t_flag: bool = True) -> None\n",
+      " |      set_wait_for_kernel_to_finish(self: pyclesperanto._pyclesperanto.gpu, t_flag: bool) -> None\n",
       " |      \n",
       " |      Force device to wait until kernel finished\n",
       " |  \n",
@@ -239,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -277,6 +322,11 @@
       " |      ndim(self: pyclesperanto._pyclesperanto.data) -> int\n",
       " |      \n",
       " |      return object dimensionality\n",
+      " |  \n",
+      " |  otype(...)\n",
+      " |      otype(self: pyclesperanto._pyclesperanto.data) -> str\n",
+      " |      \n",
+      " |      return object type (buffer, image, etc.)\n",
       " |  \n",
       " |  shape(...)\n",
       " |      shape(self: pyclesperanto._pyclesperanto.data) -> List[int[3]]\n",
@@ -321,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +489,7 @@
    "source": [
     "print(\"Test with shape (1,5,10)\")\n",
     "input_array = np.random.rand(1,5,10)\n",
-    "gpu_input_array = device.push(input_array)\n",
+    "gpu_input_array = device.push(input_array, \"buffer\")\n",
     "output_array = device.pull(gpu_input_array)\n",
     "print(\"\\thost input array:\", type(input_array), input_array.shape, input_array.dtype)\n",
     "print(\"\\tdevice array:\", type(gpu_input_array), gpu_input_array.shape(), gpu_input_array.dtype())\n",
@@ -447,7 +497,7 @@
     "\n",
     "print(\"Test with shape (5,10)\")\n",
     "input_array = np.random.rand(5,10)\n",
-    "gpu_input_array = device.push(input_array)\n",
+    "gpu_input_array = device.push(input_array, \"buffer\")\n",
     "output_array = device.pull(gpu_input_array)\n",
     "print(\"\\thost input array:\", type(input_array), input_array.shape, input_array.dtype)\n",
     "print(\"\\tdevice array:\", type(gpu_input_array), gpu_input_array.shape(), gpu_input_array.dtype())\n",
@@ -455,7 +505,7 @@
     "\n",
     "print(\"Test with shape (1,1,10)\")\n",
     "input_array = np.random.rand(1,1,10)\n",
-    "gpu_input_array = device.push(input_array)\n",
+    "gpu_input_array = device.push(input_array, \"buffer\")\n",
     "output_array = device.pull(gpu_input_array)\n",
     "print(\"\\thost input array:\", type(input_array), input_array.shape, input_array.dtype)\n",
     "print(\"\\tdevice array:\", type(gpu_input_array), gpu_input_array.shape(), gpu_input_array.dtype())\n",
@@ -463,7 +513,7 @@
     "\n",
     "print(\"Test with shape (10)\")\n",
     "input_array = np.random.rand(10)\n",
-    "gpu_input_array = device.push(input_array)\n",
+    "gpu_input_array = device.push(input_array, \"buffer\")\n",
     "output_array = device.pull(gpu_input_array)\n",
     "print(\"\\thost input array:\", type(input_array), input_array.shape, input_array.dtype)\n",
     "print(\"\\tdevice array:\", type(gpu_input_array), gpu_input_array.shape(), gpu_input_array.dtype())\n",
@@ -471,7 +521,7 @@
     "\n",
     "print(\"Test with shape (1,1,1)\")\n",
     "input_array = np.random.rand(1,1,1)\n",
-    "gpu_input_array = device.push(input_array)\n",
+    "gpu_input_array = device.push(input_array, \"buffer\")\n",
     "output_array = device.pull(gpu_input_array)\n",
     "print(\"\\thost input array:\", type(input_array), input_array.shape, input_array.dtype)\n",
     "print(\"\\tdevice array:\", type(gpu_input_array), gpu_input_array.shape(), gpu_input_array.dtype())\n",
@@ -479,7 +529,7 @@
     "\n",
     "print(\"Test with shape (1)\")\n",
     "input_array = np.random.rand(1)\n",
-    "gpu_input_array = device.push(input_array)\n",
+    "gpu_input_array = device.push(input_array, \"buffer\")\n",
     "output_array = device.pull(gpu_input_array)\n",
     "print(\"\\thost input array:\", type(input_array), input_array.shape, input_array.dtype)\n",
     "print(\"\\tdevice array:\", type(gpu_input_array), gpu_input_array.shape(), gpu_input_array.dtype())\n",
@@ -504,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,8 +562,8 @@
     "input_array = np.random.rand(2,3,4).astype(np.float32)\n",
     "\n",
     "# device input and output\n",
-    "gpu_input  = device.push(input_array)\n",
-    "gpu_output = device.create(input_array.shape)\n",
+    "gpu_input  = device.push(input_array, \"buffer\")\n",
+    "gpu_output = device.create(input_array.shape, \"buffer\")\n",
     "\n",
     "# execute kernel\n",
     "pycle.add_image_and_scalar(device=device, input=gpu_input, output=gpu_output, scalar=100)\n",
@@ -525,14 +575,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gpu output= 2412.4607 , vs host output= 2412.4607\n"
+      "gpu output= 2411.3704 , vs host output= 2411.3704\n"
      ]
     }
    ],
@@ -552,14 +602,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gpu output= 2412.4607 , vs host output= 2412.4607\n"
+      "gpu output= 2411.3704 , vs host output= 2411.3704\n"
      ]
     }
    ],
@@ -581,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -670,6 +720,11 @@
       "     |      ndim(self: pyclesperanto._pyclesperanto.data) -> int\n",
       "     |      \n",
       "     |      return object dimensionality\n",
+      "     |  \n",
+      "     |  otype(...)\n",
+      "     |      otype(self: pyclesperanto._pyclesperanto.data) -> str\n",
+      "     |      \n",
+      "     |      return object type (buffer, image, etc.)\n",
       "     |  \n",
       "     |  shape(...)\n",
       "     |      shape(self: pyclesperanto._pyclesperanto.data) -> List[int[3]]\n",
@@ -725,12 +780,12 @@
       "     |      \n",
       "     |      GPU default constructor\n",
       "     |      \n",
-      "     |      2. __init__(self: pyclesperanto._pyclesperanto.gpu, t_device_name: str, t_device_type: str = 'all') -> None\n",
+      "     |      2. __init__(self: pyclesperanto._pyclesperanto.gpu, t_device_name: str, t_device_type: str) -> None\n",
       "     |      \n",
       "     |      GPU constructor\n",
       "     |  \n",
       "     |  create(...)\n",
-      "     |      create(self: pyclesperanto._pyclesperanto.gpu, dimensions: numpy.ndarray[numpy.float32], t_type: str = 'buffer') -> PyData\n",
+      "     |      create(self: pyclesperanto._pyclesperanto.gpu, dimensions: numpy.ndarray[numpy.float32], t_type: str) -> PyData\n",
       "     |      \n",
       "     |      create an empty gpu array\n",
       "     |  \n",
@@ -738,6 +793,11 @@
       "     |      info(self: pyclesperanto._pyclesperanto.gpu) -> str\n",
       "     |      \n",
       "     |      return device informations\n",
+      "     |  \n",
+      "     |  list_available_devices(...)\n",
+      "     |      list_available_devices(self: pyclesperanto._pyclesperanto.gpu, t_device_type: str) -> List[str]\n",
+      "     |      \n",
+      "     |      list devices available to use on the system\n",
       "     |  \n",
       "     |  name(...)\n",
       "     |      name(self: pyclesperanto._pyclesperanto.gpu) -> str\n",
@@ -750,7 +810,7 @@
       "     |      read a gpu array into numpy\n",
       "     |  \n",
       "     |  push(...)\n",
-      "     |      push(self: pyclesperanto._pyclesperanto.gpu, ndarray: numpy.ndarray[numpy.float32], t_type: str = 'buffer') -> PyData\n",
+      "     |      push(self: pyclesperanto._pyclesperanto.gpu, ndarray: numpy.ndarray[numpy.float32], t_type: str) -> PyData\n",
       "     |      \n",
       "     |      create a gpu array and write numpy array into it\n",
       "     |  \n",
@@ -760,12 +820,12 @@
       "     |      return device score\n",
       "     |  \n",
       "     |  select_device(...)\n",
-      "     |      select_device(self: pyclesperanto._pyclesperanto.gpu, t_device_name: str, t_device_type: str = 'all') -> None\n",
+      "     |      select_device(self: pyclesperanto._pyclesperanto.gpu, t_device_name: str, t_device_type: str) -> str\n",
       "     |      \n",
       "     |      select device from string, return full device name string\n",
       "     |  \n",
       "     |  set_wait_for_kernel_to_finish(...)\n",
-      "     |      set_wait_for_kernel_to_finish(self: pyclesperanto._pyclesperanto.gpu, t_flag: bool = True) -> None\n",
+      "     |      set_wait_for_kernel_to_finish(self: pyclesperanto._pyclesperanto.gpu, t_flag: bool) -> None\n",
       "     |      \n",
       "     |      Force device to wait until kernel finished\n",
       "     |  \n",
@@ -1102,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,16 +1171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f4890484940>"
+       "<matplotlib.image.AxesImage at 0x7fd5105665e0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1144,18 +1204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpu_image = device.push(image)\n",
-    "gpu_output = device.create(image.shape)\n",
+    "gpu_image = device.push(image, \"buffer\")\n",
+    "gpu_output = device.create(image.shape, \"buffer\")\n",
     "pycle.gaussian_blur(device=device, input=gpu_image, output=gpu_output, sigma_x=3, sigma_y=3, sigma_z=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1169,10 +1229,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f489038c850>"
+       "<matplotlib.image.AxesImage at 0x7fd510463490>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
