added examples + user docs

--- a/user_docs/multi_gpu_demo.ipynb
+++ b/user_docs/multi_gpu_demo.ipynb
@@ -1,55 +1,63 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "559ea9c9-70ef-403e-90dd-2f815d3c62af",
+   "metadata": {},
+   "source": [
+    "# Multi-GPU demo\n",
+    "pyclesperanto allows processing images on multiple GPUs in parallel. Therefore, you need to create multiple clesperanto/GPU handles, such as `cle1`, `cle2`, ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c363df75-d326-4665-abba-c3a37b466b7e",
+   "id": "65ec3020-97ba-4b64-a2eb-ef9ca064d6cd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'NVIDIA GeForce RTX 3050 Ti Laptop GPU'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from skimage.io import imread\n",
     "from pyclesperanto import Clesperanto\n",
-    "\n",
-    "cle1 = Clesperanto()\n",
-    "cle1.select_device(\"RTX\")"
+    "import time\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bfa7a1b3-7b9b-4617-a6aa-a00957baebdd",
+   "id": "5919cda3-0f9f-40c1-b4e6-d5b5a2b0948b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'gfx90c'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cle2 = Clesperanto()\n",
-    "cle2.select_device(\"gfx\")"
+    "cle1 = Clesperanto()\n",
+    "cle1.select_device(\"RTX\")\n",
+    "cle1.set_wait_for_kernel_to_finish(False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "bfa7a1b3-7b9b-4617-a6aa-a00957baebdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cle2 = Clesperanto()\n",
+    "cle2.select_device(\"gfx\")\n",
+    "cle2.set_wait_for_kernel_to_finish(False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4efd7f14-41a7-422e-a51c-7e4eb331cda4",
+   "metadata": {},
+   "source": [
+    "## Using multiple GPUs sequentially\n",
+    "As you can see above, these two handles represent different GPUs, from NVidia and AMD. You can use these two handles by calling operations on them as usual for just showing images ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "7206928d-60bf-4c63-b49f-893f55d69f47",
    "metadata": {},
    "outputs": [
@@ -73,8 +81,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57009b1e-28f5-4101-b889-f0ad324c3c22",
+   "metadata": {},
+   "source": [
+    "... and for executing operations on the respective GPU."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6deba0fe-4212-4a3d-96e8-81b04ed11371",
    "metadata": {},
    "outputs": [
@@ -99,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3095d460-f49c-4f58-a62c-1bda9b7e420d",
    "metadata": {},
    "outputs": [
@@ -124,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0c11dc29-3823-4bcf-a050-2ddadd55b72e",
    "metadata": {},
    "outputs": [
@@ -142,14 +158,14 @@
     }
    ],
    "source": [
-    "blurred1 = cle1.gaussian_blur(image, sigma_x=15)\n",
+    "blurred3 = cle1.gaussian_blur(image, sigma_x=15)\n",
     "\n",
-    "cle1.imshow(blurred1)"
+    "cle1.imshow(blurred3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "88ce83b6-9e13-4ef0-969f-4e1a12fa9c5b",
    "metadata": {},
    "outputs": [
@@ -167,9 +183,17 @@
     }
    ],
    "source": [
-    "blurred2 = cle2.gaussian_blur(image, sigma_x=20)\n",
+    "blurred4 = cle2.gaussian_blur(image, sigma_x=20)\n",
     "\n",
-    "cle2.imshow(blurred2)"
+    "cle2.imshow(blurred4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "163b07d7-0500-4b11-8761-da9630b6dae4",
+   "metadata": {},
+   "source": [
+    "Just for visualization purposes, we again print put the name of the GPU device that is used under the hood."
    ]
   },
   {
@@ -179,11 +203,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NVIDIA GeForce RTX 3050 Ti Laptop GPU\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'NVIDIA GeForce RTX 3050 Ti Laptop GPU'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -197,11 +224,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gfx90c\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'gfx90c'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -209,9 +239,170 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7776e550-1203-460f-b40d-c73993e0292d",
+   "metadata": {},
+   "source": [
+    "For demonstration purposes, we will execute a Gaussian blur with a wide radius on a large image. We will see that this operation takes some time on the individual GPUs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "44519834-ddb6-48e4-9105-6863ba424c44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a 100 MB test image\n",
+    "test_image = np.random.random((1000, 1000, 100))\n",
+    "\n",
+    "# push the image to memory of both GPUs.\n",
+    "image1 = cle1.push(test_image)\n",
+    "image2 = cle2.push(test_image)\n",
+    "\n",
+    "# we wait here for a second to make sure the images arrived\n",
+    "time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e183da06-14b7-46e7-84e5-6be7682024af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1000, 1000, 100], [1000, 1000, 100])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image1.shape(), image2.shape()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf975e39-5a2a-44d6-a970-cb435344dcc7",
+   "metadata": {},
+   "source": [
+    "We now execute the Gaussian blur on both GPUs sequentially a couple of times and measure the time it takes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7d86501e-4a63-4916-a7c9-4a6325e6e3af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU took 12.324278116226196\n",
+      "Processing and pulling on gfx90c took 8.374778985977173\n",
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU took 12.663773536682129\n",
+      "Processing and pulling on gfx90c took 0.3976328372955322\n",
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU took 12.479730606079102\n",
+      "Processing and pulling on gfx90c took 0.3422660827636719\n",
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU took 12.545636892318726\n",
+      "Processing and pulling on gfx90c took 0.3417222499847412\n",
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU took 12.609831809997559\n",
+      "Processing and pulling on gfx90c took 0.33879709243774414\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 5):\n",
+    "    print(\"-------------\")\n",
+    "    start_time = time.time()\n",
+    "    \n",
+    "    # process image on first GPU\n",
+    "    blurred1 = cle1.gaussian_blur(image1, sigma_x=200 + i, sigma_y=200 + i)\n",
+    "    # retrieve result from first GPU\n",
+    "    result1 = cle1.pull(blurred1)\n",
+    "    print(\"Processing and pulling on\", cle1.name, \"took\", time.time() - start_time)\n",
+    "    \n",
+    "    start_time = time.time()\n",
+    "    # process image on second GPU\n",
+    "    blurred2 = cle2.gaussian_blur(image2, sigma_x=200 + i, sigma_y=200 + i)\n",
+    "    # retrieve result from second GPU\n",
+    "    result2 = cle2.pull(blurred2)\n",
+    "    print(\"Processing and pulling on\", cle2.name, \"took\", time.time() - start_time)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6b3c41a-086c-4f43-a966-ba39b397d802",
+   "metadata": {},
+   "source": [
+    "You can clearly see that the one GPU is a bit slower than the other. We now repeat that experiment with a different call-order. If processing is done in parallel in the background, we will see that the processing time of each for-loop iteration is less than in the example above. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "da9767be-422f-4133-8ac2-c333cd04a01b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU and gfx90c in parallel took 12.715256214141846\n",
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU and gfx90c in parallel took 12.77027940750122\n",
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU and gfx90c in parallel took 12.827542066574097\n",
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU and gfx90c in parallel took 12.900683403015137\n",
+      "-------------\n",
+      "Processing and pulling on NVIDIA GeForce RTX 3050 Ti Laptop GPU and gfx90c in parallel took 12.945844411849976\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 5):\n",
+    "    print(\"-------------\")\n",
+    "    start_time = time.time()\n",
+    "    \n",
+    "    # process image on both GPUs\n",
+    "    blurred1 = cle1.gaussian_blur(image1, sigma_x=200 + i, sigma_y=200 + i)\n",
+    "    blurred2 = cle2.gaussian_blur(image2, sigma_x=200 + i, sigma_y=200 + i)\n",
+    "\n",
+    "    # retrieve result from both GPUs\n",
+    "    result1 = cle1.pull(blurred1)\n",
+    "    result2 = cle2.pull(blurred2)\n",
+    "    print(\"Processing and pulling on\", cle1.name, \"and\", cle2.name, \"in parallel took\", time.time() - start_time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e82215fe-6473-4321-9594-d72963deb08a",
+   "metadata": {},
+   "source": [
+    "It appears that the parallelization doesn't work yet as expected. But we're working on it! \n",
+    "\n",
+    "Best, \n",
+    "Robert"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fece790e-2bbd-44cd-ab98-81e2d9196ef6",
+   "id": "24c57bf3-99a6-4d84-83a0-c7d8e5a1de02",
    "metadata": {},
    "outputs": [],
    "source": []
