--- a/user_docs/process_blobs.ipynb
+++ b/user_docs/process_blobs.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2b5895b8-f914-4cbf-835e-4d62e8373b47",
+   "metadata": {},
+   "source": [
+    "# Segment + analyze blobs\n",
+    "In this notebook we demonstrate how images can be processed on GPUs, objects segmented and afterwards measured with [scikit-image](https://scikit-image.org/)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "62615a85-7085-4ac2-8e91-257dcfd517e9",
@@ -12,6 +21,14 @@
     "from skimage.io import imread\n",
     "from skimage.measure import regionprops_table\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa853a6c-2d28-49c8-8d3c-5afcc1056d03",
+   "metadata": {},
+   "source": [
+    "We first load an image using scikit-image's `imread()` function and visualize it using clesperanto's `imshow()` funciton, that under the hood uses similar functionality like scikit-image for showing images."
    ]
   },
   {
@@ -34,9 +51,17 @@
     }
    ],
    "source": [
-    "image = imread(\"../demo/blobs.tif\")\n",
+    "image = imread(\"blobs.tif\")\n",
     "\n",
     "cle.imshow(image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e38ed34a-d720-421d-a9ad-20ac75b9157d",
+   "metadata": {},
+   "source": [
+    "We can blur this image using a `gaussian_blur` filter. All filters and image processing operations are available via the `cle.` gateway. "
    ]
   },
   {
@@ -65,6 +90,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3abeed7d-b799-4b7f-a038-ed7b69906b97",
+   "metadata": {},
+   "source": [
+    "Also thresholding and connected component labeling work similarly via the `cle` gateway. Furthermore, the `imshow` function has some convenience built-in for visualizing label images of segmented blobs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "267c931a-3e85-49e5-afaa-acef2870b02c",
@@ -87,6 +120,14 @@
     "binary_image = cle.threshold_otsu(blurred_image)\n",
     "label_image = cle.connected_components_labeling_box(binary_image)\n",
     "cle.imshow(label_image, labels=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1b13731-9981-42cf-a2c0-6c442bf95c42",
+   "metadata": {},
+   "source": [
+    "Before we can pass the resulting label image to another function, e.g. from scikit-image, we need to pull it back to CPU memory and with that convert it into a numpy array."
    ]
   },
   {
@@ -353,7 +394,9 @@
     }
    ],
    "source": [
-    "table = regionprops_table(image, cle.pull(label_image), properties=['label', 'area', 'mean_intensity'])\n",
+    "numpy_label_image = cle.pull(label_image)\n",
+    "\n",
+    "table = regionprops_table(image, numpy_label_image, properties=['label', 'area', 'mean_intensity'])\n",
     "pd.DataFrame(table)"
    ]
   },
