--- a/user_docs/process_tribolium.ipynb
+++ b/user_docs/process_tribolium.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a8ce6580-7060-4a93-b4c3-be3ed82363e8",
+   "metadata": {},
+   "source": [
+    "# 3D Tribolium nuclei segmentation\n",
+    "GPU-accelerated image processing makes a lot of sense, especially when processing 3D data. In this notebook we process a little crop of the light-sheet microscopy dataset of a developing Tribolium embryo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "49dda57e-cb2f-4b75-a3b2-dea1a2d636dc",
@@ -21,7 +30,16 @@
     "from skimage.io import imread\n",
     "from pyclesperanto import cle\n",
     "\n",
+    "# We select the GPU with \"RTX\" in the name\n",
     "cle.select_device(\"RTX\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1147b8d5-3cc4-4585-8bbd-c49a7c3c6232",
+   "metadata": {},
+   "source": [
+    "We download an example dataset and print out the image's dimensionality/shape."
    ]
   },
   {
@@ -48,6 +66,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7f45f2f7-ccca-41be-9441-756bfdaca4f1",
+   "metadata": {},
+   "source": [
+    "The `imshow` function of pyclesperanto visualized 3D image stacks by applying a maximum-intensity projection along the Z dimension (100 slices in this example)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "531f965d-921d-4ae0-b448-bfef1887f3b9",
@@ -71,6 +97,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe8f15e4-268c-4fb1-bd0a-d7f8f0d29ae6",
+   "metadata": {},
+   "source": [
+    "We can also explicitly perform a `maximum_x_projection` and visualize the result."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "bd97a474-406c-4745-9131-3d3332c6d843",
@@ -91,6 +125,14 @@
    ],
    "source": [
     "cle.imshow(cle.maximum_x_projection(image))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58c4f51e-c641-4c7e-ab83-079a4ecc4b23",
+   "metadata": {},
+   "source": [
+    "Next, we performe background subtraction using the [top-hat filter](https://en.wikipedia.org/wiki/Top-hat_transform)."
    ]
   },
   {
@@ -119,6 +161,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de901e20-4169-4f72-a1e6-0ce77ba2cd23",
+   "metadata": {},
+   "source": [
+    "The [Voronoi-Otsu-Labeling algorithm](https://github.com/clEsperanto/pyclesperanto_prototype/blob/master/demo/segmentation/voronoi_otsu_labeling.ipynb) applies a chain of operations such as a [Gaussian-blur](https://en.wikipedia.org/wiki/Gaussian_blur), [Otsu's thresholding](https://en.wikipedia.org/wiki/Otsu%27s_method) method and a limited [Voronoi-diagram](https://en.wikipedia.org/wiki/Voronoi_diagram) to segment and label objects."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "36877204-0f47-4e33-96d5-59e353086098",
@@ -141,6 +191,14 @@
     "label_image = cle.voronoi_otsu_labeling(background_subtracted, spot_sigma=4, outline_sigma=1)\n",
     "\n",
     "cle.imshow(label_image, labels=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ba3e665-56ff-4272-9c0c-96384fbe959f",
+   "metadata": {},
+   "source": [
+    "Also these results can be visualized from other perspectives."
    ]
   },
   {
