Added docstrings, removed duplicated threshold_otsu, reran notebook

--- a/user_docs/explore_API.ipynb
+++ b/user_docs/explore_API.ipynb
@@ -26,18 +26,57 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_keys(['add_image_and_scalar', 'add_images_weighted', 'binary_not', 'connected_components_labeling_box', 'copy', 'create', 'create_like', 'difference_of_gaussian', 'gaussian_blur', 'greater_or_equal_constant', 'histogram', 'imshow', 'list_available_devices', 'masked_voronoi_labeling', 'maximum_of_all_pixels', 'maximum_x_projection', 'maximum_y_projection', 'maximum_z_projection', 'operation', 'operations', 'pull', 'push', 'select_device', 'set_wait_for_kernel_to_finish', 'threshold_otsu', 'top_hat_box', 'voronoi_otsu_labeling'])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add_image_and_scalar\n",
+      "add_images_weighted\n",
+      "binary_and\n",
+      "binary_not\n",
+      "binary_or\n",
+      "binary_subtract\n",
+      "binary_xor\n",
+      "connected_components_labeling_box\n",
+      "copy\n",
+      "create\n",
+      "create_like\n",
+      "detect_maxima_box\n",
+      "difference_of_gaussian\n",
+      "dilate_sphere\n",
+      "erode_sphere\n",
+      "extend_labeling_via_voronoi\n",
+      "gaussian_blur\n",
+      "get_device\n",
+      "greater_or_equal\n",
+      "greater_or_equal_constant\n",
+      "histogram\n",
+      "imshow\n",
+      "list_available_devices\n",
+      "masked_voronoi_labeling\n",
+      "maximum_box\n",
+      "maximum_of_all_pixels\n",
+      "maximum_x_projection\n",
+      "maximum_y_projection\n",
+      "maximum_z_projection\n",
+      "mean_box\n",
+      "minimum_box\n",
+      "minimum_of_all_pixels\n",
+      "operation\n",
+      "operations\n",
+      "pull\n",
+      "push\n",
+      "select_device\n",
+      "set_wait_for_kernel_to_finish\n",
+      "sum_of_all_pixels\n",
+      "threshold_otsu\n",
+      "top_hat_box\n",
+      "voronoi_otsu_labeling\n"
+     ]
     }
    ],
    "source": [
-    "cle.operations().keys()"
+    "for k in cle.operations().keys():\n",
+    "    print(k)"
    ]
   },
   {
@@ -57,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "<bound method Clesperanto.add_image_and_scalar of <pyclesperanto._clesperanto_gateway.Clesperanto object at 0x00000204AEB3DE20>>"
+       "<bound method Clesperanto.add_image_and_scalar of <pyclesperanto._clesperanto_gateway.Clesperanto object at 0x000001F6FA35DEB0>>"
       ]
      },
      "execution_count": 3,
