ENH: speed up push pull operations

--- a/developer_docs/API_demo.ipynb
+++ b/developer_docs/API_demo.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "id": "6607b23e",
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "3550d086",
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b9be3c72",
    "metadata": {},
    "outputs": [
     {
@@ -62,6 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "9bf18291",
    "metadata": {},
    "outputs": [
     {
@@ -82,12 +86,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "8891991d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f579c6ee2f0>"
+       "<matplotlib.image.AxesImage at 0x7f646020a2c0>"
       ]
      },
      "execution_count": 5,
@@ -114,6 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "0a30381e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "15d62578",
    "metadata": {},
    "outputs": [
     {
@@ -139,13 +146,6 @@
    "source": [
     "cle.imshow(blurred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
