--- a/developer_docs/API_demo.ipynb
+++ b/developer_docs/API_demo.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyclesperanto 0.6.5 - running with CLIc 0.6.2\n"
+      "pyclesperanto 0.6.5 - running with CLIc 0.6.3\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f646020a2c0>"
+       "<matplotlib.image.AxesImage at 0x7f8150327370>"
       ]
      },
      "execution_count": 5,
