--- a/demos/explore_API.ipynb
+++ b/demos/explore_API.ipynb
@@ -14,9 +14,29 @@
    "execution_count": 1,
    "id": "0f0509f1-d45e-4991-8f48-16b286ef82a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyclesperanto version: 0.6.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<cle::Processor (NVIDIA GeForce RTX 3050 Ti Laptop GPU)>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from pyclesperanto import cle"
+    "import pyclesperanto as cle\n",
+    "\n",
+    "cle.select_device(\"TX\")"
    ]
   },
   {
@@ -29,6 +49,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Image\n",
+      "__builtins__\n",
+      "__cached__\n",
+      "__common_alias__\n",
+      "__doc__\n",
+      "__file__\n",
+      "__loader__\n",
+      "__name__\n",
+      "__package__\n",
+      "__path__\n",
+      "__spec__\n",
+      "__version__\n",
+      "_decorators\n",
+      "_device\n",
+      "_functionalities\n",
+      "_image\n",
+      "_image_operators\n",
+      "_memory_operations\n",
+      "_pyclesperanto\n",
+      "_tier1\n",
+      "_tier2\n",
+      "_tier3\n",
+      "_tier4\n",
+      "_tier5\n",
+      "_tier6\n",
+      "_version\n",
       "add_image_and_scalar\n",
       "add_images_weighted\n",
       "binary_and\n",
@@ -36,22 +82,31 @@
       "binary_or\n",
       "binary_subtract\n",
       "binary_xor\n",
+      "buffer\n",
       "connected_components_labeling_box\n",
       "copy\n",
       "create\n",
       "create_like\n",
+      "dType\n",
       "detect_maxima_box\n",
       "difference_of_gaussian\n",
       "dilate_sphere\n",
       "erode_sphere\n",
       "extend_labeling_via_voronoi\n",
+      "float\n",
       "gaussian_blur\n",
       "get_device\n",
       "greater_or_equal\n",
       "greater_or_equal_constant\n",
       "histogram\n",
+      "image\n",
       "imshow\n",
+      "info\n",
+      "int16\n",
+      "int32\n",
+      "int8\n",
       "list_available_devices\n",
+      "mType\n",
       "masked_voronoi_labeling\n",
       "maximum_box\n",
       "maximum_of_all_pixels\n",
@@ -61,21 +116,25 @@
       "mean_box\n",
       "minimum_box\n",
       "minimum_of_all_pixels\n",
-      "operation\n",
-      "operations\n",
+      "os\n",
       "pull\n",
       "push\n",
       "select_device\n",
       "set_wait_for_kernel_to_finish\n",
+      "sobel\n",
+      "subtract_image_from_scalar\n",
       "sum_of_all_pixels\n",
       "threshold_otsu\n",
       "top_hat_box\n",
+      "uint16\n",
+      "uint32\n",
+      "uint8\n",
       "voronoi_otsu_labeling\n"
      ]
     }
    ],
    "source": [
-    "for k in cle.operations().keys():\n",
+    "for k in dir(cle):\n",
     "    print(k)"
    ]
   },
@@ -96,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "<bound method Clesperanto.add_image_and_scalar of <pyclesperanto._clesperanto_gateway.Clesperanto object at 0x000001F6FA35DEB0>>"
+       "<function pyclesperanto.add_image_and_scalar(input_image: Union[numpy.ndarray, pyclesperanto._image.cleImage], output_image: Union[numpy.ndarray, pyclesperanto._image.cleImage] = None, scalar: float = 0, device: pyclesperanto._device.Device = None) -> Union[numpy.ndarray, pyclesperanto._image.cleImage]>"
       ]
      },
      "execution_count": 3,
@@ -105,7 +164,7 @@
     }
    ],
    "source": [
-    "cle.operation(\"add_image_and_scalar\")"
+    "getattr(cle, \"add_image_and_scalar\")"
    ]
   },
   {
@@ -127,10 +186,11 @@
       "text/plain": [
        "\u001b[1;31mSignature:\u001b[0m\n",
        "\u001b[0mcle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_image_and_scalar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m\n",
-       "\u001b[0m    \u001b[0msource\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_pyclesperanto\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
-       "\u001b[0m    \u001b[0mdestination\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_pyclesperanto\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m    \u001b[0minput_image\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_image\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcleImage\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m    \u001b[0moutput_image\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_image\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcleImage\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
        "\u001b[0m    \u001b[0mscalar\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mfloat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
-       "\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[0m    \u001b[0mdevice\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_device\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDevice\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+       "\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mUnion\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_image\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcleImage\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
        "\u001b[1;31mDocstring:\u001b[0m\n",
        "Adds a scalar value s to all pixels x of a given image X.\n",
        "\n",
@@ -138,9 +198,9 @@
        "\n",
        "Parameters\n",
        "----------\n",
-       "source : Image\n",
+       "input_image : Image\n",
        "    The input image where scalare should be added.\n",
-       "destination : Image, optional\n",
+       "output_image : Image, optional\n",
        "    The output image where results are written into.\n",
        "scalar : float, optional\n",
        "    The constant number which will be added to all pixels.\n",
@@ -148,9 +208,9 @@
        "\n",
        "Returns\n",
        "-------\n",
-       "destination\n",
-       "\u001b[1;31mFile:\u001b[0m      c:\\structure\\code\\pyclesperanto\\pyclesperanto\\_clesperanto_gateway.py\n",
-       "\u001b[1;31mType:\u001b[0m      method\n"
+       "output_image\n",
+       "\u001b[1;31mFile:\u001b[0m      c:\\users\\haase\\mambaforge\\envs\\bio39\\lib\\site-packages\\pyclesperanto\\_tier1.py\n",
+       "\u001b[1;31mType:\u001b[0m      function\n"
       ]
      },
      "metadata": {},
@@ -171,18 +231,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on method add_image_and_scalar:\n",
+      "Help on function add_image_and_scalar in module pyclesperanto:\n",
       "\n",
-      "add_image_and_scalar(source: Union[numpy.ndarray, pyclesperanto._pyclesperanto.data], destination: Union[numpy.ndarray, pyclesperanto._pyclesperanto.data] = None, scalar: float = 0) method of pyclesperanto._clesperanto_gateway.Clesperanto instance\n",
+      "add_image_and_scalar(input_image: Union[numpy.ndarray, pyclesperanto._image.cleImage], output_image: Union[numpy.ndarray, pyclesperanto._image.cleImage] = None, scalar: float = 0, device: pyclesperanto._device.Device = None) -> Union[numpy.ndarray, pyclesperanto._image.cleImage]\n",
       "    Adds a scalar value s to all pixels x of a given image X.\n",
       "    \n",
       "    <pre>f(x, s) = x + s</pre>\n",
       "    \n",
       "    Parameters\n",
       "    ----------\n",
-      "    source : Image\n",
+      "    input_image : Image\n",
       "        The input image where scalare should be added.\n",
-      "    destination : Image, optional\n",
+      "    output_image : Image, optional\n",
       "        The output image where results are written into.\n",
       "    scalar : float, optional\n",
       "        The constant number which will be added to all pixels.\n",
@@ -190,7 +250,7 @@
       "    \n",
       "    Returns\n",
       "    -------\n",
-      "    destination\n",
+      "    output_image\n",
       "\n"
      ]
     }
@@ -224,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
