Clean up for merging

--- a/demos/run_custom_kernel.ipynb
+++ b/demos/run_custom_kernel.ipynb
@@ -196,9 +196,7 @@
     "cle.execute(anchor=\".\", \n",
     "            opencl_filename=\"add_image_and_scalar.cl\", \n",
     "            kernel_name=\"add_image_and_scalar\", \n",
-    "            parameters=params,\n",
-    "#             global_range=params['dst'].shape,\n",
-    "#             device = gpu_input.device\n",
+    "            parameters=params\n",
     "           )"
    ]
   },
